<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Bakumon. https://github.com/Bakumon
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.bakumon.moneykeeper.ui.home.HomeActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="208dp"
            android:background="@drawable/banner">
<!--            app:layout_anchor="@+id/appBarLayout">-->
<!--            app:layout_anchorGravity="center"-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="left"
                            android:orientation="horizontal"
                            android:paddingLeft="20dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_month_outlay"
                                android:textColor="@color/colorTextWhite1" />

                            <TextView
                                android:id="@+id/tv_month_outlay"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:ellipsize="end"
                                android:maxLines="2"
                                android:text="0"
                                android:textColor="@color/colorTextWhite"
                                android:textSize="34sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="left"
                            android:orientation="horizontal"
                            android:paddingLeft="20dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_month_income"
                                android:textColor="@color/colorTextWhite1" />

                            <TextView
                                android:id="@+id/tv_month_income"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:ellipsize="end"
                                android:maxLines="2"
                                android:text="0"
                                android:textColor="@color/colorTextWhite"
                                android:textSize="34sp" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </android.support.design.widget.AppBarLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTextWhite4"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/item_home" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center"
            android:layout_margin="25dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="addRecordClick"
            app:backgroundTint="@color/theme_color3"
            app:srcCompat="@drawable/ic_add" />

        <LinearLayout
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:padding="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"

                android:orientation="vertical">
                <me.bakumon.moneykeeper.view.QMUIAlphaImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_setting"
                    android:layout_gravity="center"
                    android:contentDescription="@string/content_des_setting"
                    android:onClick="settingClick" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_setting">
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:orientation="vertical">
                <me.bakumon.moneykeeper.view.QMUIAlphaImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_acc"
                    android:layout_gravity="center"
                    android:contentDescription="@string/text_account"
                    android:onClick="accountClick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_account">
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:orientation="vertical">
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <me.bakumon.moneykeeper.view.QMUIAlphaImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_statistics"
                    android:contentDescription="@string/content_des_statistics"
                    android:onClick="statisticsClick" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_graph">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:orientation="vertical">
                <me.bakumon.moneykeeper.view.QMUIAlphaImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_people_outline_black_24dp"
                    android:contentDescription="成员统计"
                    android:onClick="memberClick" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_member">

                </TextView>

            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>