<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.bakumon.moneykeeper.ui.accountwater.AccountWaterActivity">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/account_title_bar"
            layout="@layout/layout_title_bar" />


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/banner"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="left"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_surplus"
                    android:textColor="@color/colorTextWhite1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/account_net_asset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="0.00"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="34sp" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_flow_out"
                            android:textSize="18sp"
                            android:textColor="@color/colorTextWhite1" />

                        <TextView
                            android:id="@+id/tv_month_outlay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="0"
                            android:textColor="@color/colorTextWhite"
                            android:textSize="34sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_flow_in"
                            android:textSize="18sp"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:textColor="@color/colorTextWhite1" />

                        <TextView
                            android:id="@+id/tv_month_income"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="0"
                            android:textColor="@color/colorTextWhite"
                            android:textSize="34sp" />

                    </LinearLayout>

                </LinearLayout>






            </LinearLayout>
        </android.support.design.widget.AppBarLayout>



        <!-- 列表体现，现金账户的流水。。。。-->
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_home"
                android:layout_width="match_parent"
                android:layout_height="339dp"

                android:layout_weight="1"

                android:background="@color/colorTextWhite4"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/item_home" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:padding="8dp">


                <me.bakumon.moneykeeper.view.QMUIAlphaImageButton
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/month"
                    android:contentDescription="@string/content_des_setting"
                    android:onClick="accountBillClick" />

                <me.bakumon.moneykeeper.view.QMUIAlphaImageButton
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/year"
                    android:contentDescription="@string/content_des_statistics"
                    android:onClick="accountBillYearClick" />

            </LinearLayout>
        </android.support.design.widget.AppBarLayout>
    </LinearLayout>
</layout>